@@ -1,7 +1,8 @@
 {{$NEXT}}
     - Fix PDF::Font::Loader::Enc::Unicode decode() method
     - Fix CMap ligature handling
-    - Fix inverted Identity-H %cmap
+    - Fix inverted Identity-H %.charset attribute
+    - Fix ToUnicode 'bfrange' construction
 
 0.5.9 
     - Add PDF::Font::Loader::Enc::Unicode encoder (experimental) for reading and
